--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <app-header></app-header>
+<app-signup></app-signup>
+<app-profile></app-profile>
+<app-product></app-product>
 <app-existing-product></app-existing-product>
+
 <div class="min-vh-100">
   <router-outlet ></router-outlet>
 </div>
