--- a/src/app/componentes/modal-existing-products/modal-existing-products.component.html
+++ b/src/app/componentes/modal-existing-products/modal-existing-products.component.html
@@ -8,7 +8,7 @@
       <div class="modal-body text-center">
         <div class="mb-3">
           <img [src]="getImageProduct(image)" [alt]="description" class="rounded mb-3 img-size" id="setImageProduct"><br>
-          <label for="file-input" class="text-primary text-decoration-none">Cambiar foto del producto</label>
+          <label for="file-input" class="text-primary text-decoration-none">Cargar el producto</label>
           <input type="file" (change)="fileUploadProduct($event)" class="d-none" id="file-input" accept=".jpg, .png, .gif">
         </div>
 
