--- a/src/app/cuentas/cuentas.component.html
+++ b/src/app/cuentas/cuentas.component.html
@@ -8,7 +8,7 @@
         <div class="my-4 border-bottom fondo-primario texto-resaltado shadow d-flex">
             <div class="mt-4 ms-5 flex-fill justify-content-end">
                 <h2>Saldo total disponible:</h2>
-                <h5 class="ms-5 pt-2">{{saldoTotal}}€</h5>
+                <h5 class="ms-5 pt-2">Tus cuentas suman un total de {{saldoTotal}}€</h5>
             </div>
 
             <img src="assets/boveda.png" class="w-25 float-end">
