--- a/src/app/componentes/modal-login/modal-login.component.html
+++ b/src/app/componentes/modal-login/modal-login.component.html
@@ -24,7 +24,7 @@
 
   <div mat-dialog-actions>
     <button mat-button (click)="closeDialog()">Cerrar</button>
-    <button mat-button (click)="logarse()" cdkFocusInitial>Aceptar</button>
+    <button mat-button (click)="handleLogin()" cdkFocusInitial>Aceptar</button>
   </div>
 
   <div>
