--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -32,6 +32,7 @@
                             </a>
                             <a href="https://www.instagram.com/" target="_blank" class="btn btn-danger">
                                 <i class="fab fa-instagram"></i>
+                                <a href="	https://www.arelance.com/assets/img/arelance/logoArelance.png"></a>
                             </a>
                         </div>
                     </div>
