--- a/src/app/modificar-datos-cliente/modificar-datos-cliente.component.html
+++ b/src/app/modificar-datos-cliente/modificar-datos-cliente.component.html
@@ -1,1 +1,8 @@
-<p>modificar-datos-cliente works!</p>
+<!-- <div class="container">
+    <h1>Modificar Datos Cliente</h1>
+    <p>{{ nombre }}</p>
+  
+    <!-- Agrega aquí los campos para modificar phone, email, imagenString, user y password -->
+  
+  </div>
+   -->
