--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -51,9 +51,19 @@
                 <a class="text-secondary text-decoration-none" href="https://www.Facebook.com">Facebook</a>
             </div>
         </div>
+        <div class="col-xs-12 col-md-6 col-lg-3">
+            <div>
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
+                    id="Layer_1" x="0px" y="0px" width="99px" height="33px" viewBox="0 0 198 53"
+                    enable-background="new 0 0 198 53" xml:space="preserve">
+                    <image id="image0" width="198" height="53" x="0" y="0"
+                        xlink:href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMYAAAA1CAMAAAAtQ2TYAAAABGdBTUEAALGPC/xhBQAAACBjSFJN AAB6JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAABXFBMVEX/////0gP/0gP/0gP/ 0gP/0gP/0gP/0gMDeMY6jJt+pGdPk4tmm3qqtEXQwSj0zgv/0gMDeMYDeMYmhKtQlIqVrFV/pGar tEQ6jJsSfbu+uzX60AcDeMYDeMbAuzTryxL90QVmm3q+uzX/0gMDeMZonHjRwSfgxxvfxxvryxID eMb/0gP/0gMXf7cTfrpHkJElhKw5i5z/0gP/0gOUrFaTrFYDeMY4i50DeMYDeMYDeMYDeMYDeMYD eMYDeMYDeMYDeMYDeMYDeMYDeMYDeMYDeMYDeMYDeMYDeMYDeMYDeMbQwSgWf7f/0gPexhyDpmNP k4u2uDz/0gPMwCv/0gP/0gP/0gMDeMYDeMb/0gOEpmIDeMa0tz3/0gPVwyN+pGcRfbv/0gP/0gP8 0QX/0gP0zgvCvDLtzBH50AgUfrl+pGc4i508jJrZxSDGvi/vzA//0gP/0gMDeMb///+WDG28AAAA cXRSTlMAEFCAsMBAYCCQw9DIv8PY7xCg48/Aw7/Y8MDjUO/A0PDGvt+fyMLIyM/Pr8/D77Hj2J9/ wL+P108/X98frzCAYJC/sMBwL0Bvfw/Cw0/Huc+cMDtvvz9u8I8f4Icvq8HvIKDgD9d8qsLwwtjM zbmHH+EC8DMAAAABYktHRACIBR1IAAAACXBIWXMAAAsSAAALEgHS3X78AAAAB3RJTUUH5QQWDB4X VCfNbgAABZ9JREFUaN7Vmet72jYUxp2RtoxwCYUQiHFhC9liyrKkyRi2MVCaJtjdJcvart29u983 6///MMuS5SMhE1JogffhgyRb0vnpSEeSUZRxrb2RWL/hYd1YT9xUVlJrtwhBpPVba4s26rpKvpna SKc3sFKZbI6CbCZWCiR/G2EViltbpe1SsYwq6R2VkKwQSFVDqFwoZe/U6p5Xx8bntotvvU04dldk keQbqLD3zrvCwvDUfZ2mEou2cCqKZiGjezLV6zRxd/knlk+x712l1rJz5N87yAF7dX01Od4/DCn0 zEYQrtBRqj7OcW/Rhk5Uo0LiqpqpoEjFdHaM43jRpk5QlcyoOgfh66B8MuaR5Y27eS0ng8CqfCBi 7C7a2li1T/BO9yE0v9nuGIZhti10KDpk4rTKXzViUwzqte0nNZLId4YOXdHoslcMG53wGJtCtOo1 EeqT5EBDVo97ZiFtIMv2/ZECb/oVafY+QkMAUn2gYYNOH0ZleZt/JazRKPgU0BNnnJmGlZnoDgvX qQZW4pQGesgHNiT5V8/9hBn0w948x1kLp0Y4NWTlFjNK64eFbZy1WZtOMO64r6ynAl80XMFnbjM7 YXX0EG2HtogMMAJBgTOetcl4caYEFYdBKhpnoNADVtShAmqY6JEH1kVDGZP7Eb88PuachdgATo8x 5PuSYzSEcEO9R3MDAaOJPkmDd11FwvFp/B44C0b4SIoxGgubQ4hB5jGrkUfoArx6pshk5LhFPjcM OqYyjGQ0sixlQgytBzE6HHBDkeszzh2Xc8NAvTgMOqWaHT/ds6nlEIMGE1rD4TC6MRifcxiP54cR jKkEI8kP6yByh7BYaA2bW0VKnHbjQu6MGIEtEgyyMiwWk4mZNocRZGmNIcRwYjHuQYwnc8TAQyfB aIClEy0VjcfAzqI1uDnVicU4fmUYvi0SDJIAW2kzfMIZPJBiGLEYT18BxhfhHIjFAP2c8hgmrVud AWN3PhhGaEvz+hhhJNOshXvD4MOkBKMatYUEDD42TYvx+OUxWPgLDnVoBDC4AweHQdo6ZU09ZN2E GG4TYgwhxpwjFe2SjmkyOO8G5wSGoTRjMM5I2YA21HvGhoC5pasBjJfZN55Pi0Ea18gxnlgcnMcj DNeSY9CDLL3JVAlFsDszDOUs4hB28S9jKG5Ov4uPzkOFD/3h6fcfQIdHGMAWHiM8JD273b//FU03 uEVCry0ky5+pvp5mTnnfTMKIZAsbROAMV8BgqOIJ1xarIs0VMKJTsOJyb15cSimgM/QrTrhAI8XV hCJiOsRgYypgcEs4oDhTRAwWIkTqb2UUa2Bl7Hwnu2/YUowGN3+xTAVghJeCthRD5NAotQYxQnfD CRa4Q/Zd8G5EkUNZ/vZHmh3xU5V5w48nwBgrXP7BZNBYE2RM3ZDIosUuDMfDENpmwxax+qGJn1Uo M8axBijq36OdTf4xNp7eGYXpTEtNCmI5Lte5yZpwh2EWBy4tOtkZIcgwehn7V4tud12LOkq482Zb LzgzL1uA4gihuvihquuwPjoOUNRz1y83+Xul6XSlWdcc8XceY+Q4BnezdkcjmA9rdIWpoHuJCOTF D2B15w4RSv/4k7KcavMYXkr1WombWIkWjLPBJ7ns0n6MHouKh+Nf0vE3XvyouLzfcIUt0NfRjip8 ua2nggdl9emijZ2gtsiBUvrPAEJNVSjFL4s2daKaYxzoIEv+uqnrJ0e0qKz+umhDJ8uVcPiqbByB XFH9bVmj1BUcUKVca9kpAEdBDrGXVZ8sPwU4wVyURJLf97b8hfJ89j5eizpk/yj8ka1tlQPz/V9x q7Sv1jxvd5kjLS+XBt4/U3rdq9XubD/a3qmRDeR4FSYUU5edE/86yfytY2X39X/+/W/Rhl1XrinG LNt0Z292ESQdxx6SY77tGLO39xr0P8wLnI/EJ1z4AAAAFnRFWHRDcmVhdGlvbiBUaW1lADExLzAz LzE0eMO2/AAAACV0RVh0ZGF0ZTpjcmVhdGUAMjAyMS0wNC0yMlQxMjozMDoyMyswMzowMKSJOkYA AAAldEVYdGRhdGU6bW9kaWZ5ADIwMjEtMDQtMjJUMTI6MzA6MjMrMDM6MDDV1IL6AAAAGHRFWHRT b2Z0d2FyZQBBZG9iZSBGaXJld29ya3NPsx9OAAAAAElFTkSuQmCC" />
+                </svg>
+                
+            </div>
+        </div>
         <div class="col-xs-12 pt-3">
             <p class="text-white text-center">Copyright © <em>Portalento-Digital</em> 2023</p>
         </div>
-
     </div>
 </footer>
