--- a/src/app/modificar-datos-cliente/modificar-datos-cliente.component.html
+++ b/src/app/modificar-datos-cliente/modificar-datos-cliente.component.html
@@ -2,7 +2,7 @@
     <h1>Modificar Datos Cliente</h1>
     <p>{{ nombre }}</p>
   
-    <!-- Agrega aquí los campos para modificar phone, email, imagenString, user y password -->
+    <Agrega aquí los campos para modificar phone, email, imagenString, user y password 
   
   </div>
    -->
