--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -1,7 +1,8 @@
-<header class="mb-5 text-center bg-dark text-white p-4">
+<header class="mb-5 text-center bg-secondary text-white p-4">
   <div>
-    <h1 class="fs-3 fs-md-4">ONCEMAZON</h1>
+    <img src="../../../assets/images/Logo.png" alt="Descripción de la imagen" >
   </div>
-  <app-nav></app-nav>  
+  <app-nav></app-nav>
+   
 </header>
 
