--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,37 +1,9 @@
-.nav-link{
-    color: rgb(39, 160, 76);
-    transition: .5s;
-}
-a{
-    background-color: white;
-    transition: .5s;
-}
-a:hover{
-    background-color: rgb(222, 253, 232);
-    transition: .5s;
-}
-.active {
-    box-shadow: 0px 8px 0px rgb(255, 255, 255), 0px 16px 0px rgb(39, 160, 76);;
-    color: green;
-    transform: translateY(5px);
-    transition: .5s;
-}
-.active:hover {
-    background-color: white;
-    transition: .5s;
-}
-.seleccionado {
-    box-shadow: 0px 8px 0px rgb(255, 255, 255), 0px 16px 0px rgb(39, 160, 76);;
-    color: green;
-    transform: translateY(5px);
-    transition: .5s;
-}
-.seleccionado:hover {
-    background-color: white;
-    transition: .5s;
+.btn.active {
+    background-color: chartreuse;
+    color: azure;
+    font-weight: bold;
 }
 
-.barraNav{
-    font-size: 1.1em;
-    font-weight: 500;
+.router-link-active{
+    background-color: darkgreen;   
 }
