--- a/src/app/componentes/nav/nav.component.html
+++ b/src/app/componentes/nav/nav.component.html
@@ -30,6 +30,9 @@
       <li class="nav-item">
         <a class="nav-link active" routerLink="tipoTarjetas">Medios de pago</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link active" routerLink="cesta">Mi cesta</a>
+      </li>
     </ul>
   </div>
 </nav>
