--- a/src/app/componentes/profile/profile.component.html
+++ b/src/app/componentes/profile/profile.component.html
@@ -28,7 +28,7 @@
           <td> {{ element.creditCard }} </td>
 
           <td>
-            <a class="wbtn" (click)="printProfile()"><i class="bi bi bi-printer"></i></a>
+            <!--<a class="wbtn" (click)="printProfile()"><i class="bi bi bi-printer"></i></a>-->
             <a (click)="openModal(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1), element, 'edit')" data-bs-toggle="modal" data-bs-target="#myModalProfile" ><i class="bi bi-eye"></i></a>
             <a class="wbtn" (click)="delProfile(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1))"><i class="bi bi-trash3-fill"></i></a>
             
