--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -1,7 +1,5 @@
 <div class="container">
-
-  <app-product></app-product>
-
+    <app-admin-panel></app-admin-panel>
     <div *ngIf="getSessionStorage()!=null && getSessionStorage()!=''">
         <app-product></app-product>
     </div>
